--- a/ConsoleApplication2/ConsoleApplication2.vcxproj
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Generic.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Input.cpp" />
