--- a/ConsoleApplication2/ConsoleApplication2.vcxproj
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj
@@ -142,6 +142,8 @@
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Generic.cpp" />
+    <ClCompile Include="Generic.hpp" />
+    <ClCompile Include="Items.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Input.cpp" />
@@ -151,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.hpp" />
+    <ClInclude Include="Items.hpp" />
     <ClInclude Include="NPC.hpp" />
     <ClInclude Include="Input.hpp" />
     <ClInclude Include="Text.hpp" />
